--- a/package.json
+++ b/package.json
@@ -17,6 +17,16 @@
   },
   "homepage": "https://github.com/marcelovicentegc/django-react-typescript#readme",
   "dependencies": {
-    "concurrently": "^5.2.0"
+    "@types/react-redux": "^7.1.9",
+    "@types/react-router": "^5.1.8",
+    "@types/redux-logger": "^3.0.8",
+    "@types/redux-router": "^1.0.45",
+    "concurrently": "^5.2.0",
+    "react-hotkeys": "^2.0.0",
+    "react-redux": "^7.2.1",
+    "redux": "^4.0.5",
+    "redux-logger": "^3.0.6",
+    "redux-router": "^2.1.2",
+    "redux-thunk": "^2.3.0"
   }
 }
